# everylog_rust_client

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: everylog_rust_client.rs  lib.rs  main.rs
tests/: everylog_rust_client_test.rs
